2010-08-15  Matevz Tadel  <matevz.tadel@ijs.si>

	* Glasses/GTSIsoMaker.cxx:
	* Glasses/GTSIsoMaker.h:
	In vertex_iso_fixer() properly calculate length of step along the
	gradient.
	Add member 'Int_t mFixPointMaxIter'.
	Add max-iteration and n-failed members to iso_fix_arg struct.

	* Stones/GTSIsoMakerFunctor.h:
	* Glasses/GTSTorus.cxx:
	* Glasses/GTSTorus.h:
	Change signature of GTSIsoGradient() to:
	  virtual Double_t GTSIsoGradient(Double_t x, Double_t y, Double_t z, HPointD& g) = 0;

	* Glasses/GTSRetriangulator.cxx:
	In Refine(), pass squrare of cost parameter to GTS (as was done
	for Coarsen()).

	* Glasses/GTSurf.cxx:
	* Glasses/GTSurf.h:
	Add function 'void MakeZSplitSurfaces(...)'. It creates two
	sub-surfaces, split at given z-coordinate.

2010-07-31  Matevz Tadel  <matevz.tadel@ijs.si>

	Add calculation of iso-field gradient and method to move
	surface-points onto the iso-surface.

	* Stones/GTSIsoMakerFunctor.h:
	Add new virtual (will be made abstract) function:
	  HPointD  GTSIsoGradient(Double_t x, Double_t y, Double_t z);
	This is supposed to return gradient of iso-field-value at given
	point.

	* Glasses/GTSTorus.cxx:
	* Glasses/GTSTorus.h:
	Implement new virtual GTSIsoGradient().

	* Glasses/GTSIsoMaker.cxx:
	* Glasses/GTSIsoMaker.h:
	Add function 'void FixPoints()' that loops over surface vertices
	and moves them so that they are "an epsilon" away from desired
	iso-value surface.

	* Glasses/GTSRetriangulator.cxx:
	Change default mid-vertex option to volume.

2010-07-26  Matevz Tadel  <matevz.tadel@ijs.si>

	Add plotting of iso-value difference histogram to GTSIsoMaker.

	* Glasses/GTSIsoMaker.cxx:
	* Glasses/GTSIsoMaker.h:
	Add function 'void MakeDiffHisto()' that plots difference of
	function value at all vertices of target surface with the
	iso-value set as the reference.

	* Glasses/GTSurf.cxx:
	White-space.

2010-07-25  Matevz Tadel  <matevz.tadel@ijs.si>

	* Glasses/GTSTorus.cxx:
	* Glasses/GTSTorus.h: